# reinforcement-fine-tuning

./: .gitattributes  .gitignore  Modelfile  data_quality.py  evaluation.ipynb  generated_prompt.py  main.py  preprocessing.py  pyproject.toml  synthetic_data_generation.py  tm1data.json  tm1data_1.json  train.py  train_falcon.py  train_qwen.py
RAG-Evaluation/: evaluate.py  evaluator_model.py  extract_upsert_chromadb.py  fine_tuned_model.py  ollama_qwen.py  pretrained_model.py  qna_embedding.py  rag_query_engine.py
adapter-checkpoints/20-epochs/: adapter_config.json
all-processed-data/: instructionquality.json
chromadb_storage/: embeddings_metadata.json
data-processing/: data_quality.py
evaluation_data/: evaluation_data.json  qna_embedding.csv  report.csv
fine-tuned/20-Epochs/final_model/: adapter_model.safetensors
fine-tuned/SFT-1/complete_checkpoint/: adapter_config.json  special_tokens_map.json
fine-tuned/SFT-1/final_model/: README.md  adapter_model.safetensors  chat_template.jinja  tokenizer_config.json
merging-adapters/: merging_adapters.py  model_merger.py
pre-processing/: evaluation_data_generator.py  preprocessing-gemma.py  preprocessing.py  synthetic_data_generation.py
processed-data/: instruction.json
prompts/: generated_prompt.py
training/: multi_config_training.py  train.py  train_smollm.py
